--- a/potluck/src/App.css
+++ b/potluck/src/App.css
@@ -1,38 +1,12 @@
 .App {
   text-align: center;
+  color: rgb(253, 31, 105);
+  font-family: "Times New Roman", Georiga, serif;
+  /* background: radial-gradient(circle, rgba(36,255,232,1) 14%, rgba(4,189,217,1) 100%); */
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
